src/test/resources/valid/SameClassFieldMethodName.java
class SameClassFieldMethodName {
    public static void main(String[] args) {
    }
}

// This is perfectly okay.
class SameClassFieldMethodNameTest {
    int SameClassFieldMethodNameTest;
    public int SameClassFieldMethodNameTest(int SameClassFieldMethodNameTest) {
        return SameClassFieldMethodNameTest;
    }
}
